--- a/Servo/Servo.csproj
+++ b/Servo/Servo.csproj
@@ -7,6 +7,10 @@
 
   <ItemGroup>
     <PackageReference Include="Discord.Net" Version="2.2.0" />
+    <PackageReference Include="Discord.Net.Commands" Version="2.2.0" />
+    <PackageReference Include="Discord.Net.Core" Version="2.2.0" />
+    <PackageReference Include="Discord.Net.Rest" Version="2.2.0" />
+    <PackageReference Include="Discord.Net.WebSocket" Version="2.2.0" />
     <PackageReference Include="Lavalink4NET" Version="1.6.1" />
     <PackageReference Include="Lavalink4NET.Discord.NET" Version="1.6.1" />
     <PackageReference Include="Lavalink4NET.MemoryCache" Version="1.6.1" />
